examples/error/NoMain.c
int funzione(int c){
	int a;
	float b;
	bool bRet;
	bool ab;
	bool bb;
	
	while (true)
	{
		string c;
		a = 5;
		a = false;
		a = b;
		c = "mai provato";
	}
	
	a = funzione(b, a);
	
	return a; 	
	
}
